--- a/text/main.tex
+++ b/text/main.tex
@@ -24,6 +24,7 @@
 \newcommand*{\peq}{\simeq}
 \newcommand*{\listOf}[1]{\left< #1 \right> }
 \newcommand*{\coded}[1]{\ulcorner #1 \urcorner }
+\newcommand*{\turingletter}[1]{\left< #1 \right> }
 \newcommand*{\WHILE}{\ensuremath{\mathtt{WHILE}}\xspace}
 \newcommand*{\FOR}{\ensuremath{\mathtt{FOR}}\xspace}
 \newcommand*{\TM}{\ensuremath{\mathtt{TM}}\xspace}
@@ -56,6 +57,8 @@
 	\ifthenelse{\isempty{#1}}{}{ ^{#1}}}}
 \newtheorem{prop}{Proposition}
 \newtheorem{theorem}{Theorem}
+\newtheorem{corrolary}{Corrolary}
+\newtheorem{thesis}{Thesis}
 \theoremstyle{definition}
 \newtheorem{defn}{Definition}
 \newtheorem*{example}{Example}
